--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <!-- LOGO -->
 
-  <div data-sticky-container class="sticky-container">
+  <div data-sticky-container class="sticky-container show-for-medium">
     <div class="sticky" id="example" data-sticky data-margin-top="0"
     style="width:100%;" data-margin-bottom="0" data-top-anchor="news"
    >
