--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 <body>
   <!-- LOGO -->
 
+
   <div data-sticky-container class="sticky-container hide-for-medium">
-    <div class="sticky" id="example" data-sticky data-margin-top="0"
+    <div class="sticky grigio testo-bianco" id="example" data-sticky data-margin-top="0"
     style="width:100%;" data-margin-bottom="0" data-top-anchor="news"
+     data-sticky-on="small"
    >
     <nav data-magellan>
       <ul class="horizontal menu expanded" >
@@ -30,10 +32,10 @@
 </div>
 <div class="row large-12 columns show-for-large grigio testo-bianco">
   <ul id="menu" class="menu expanded">
-    <li><a href="#">Chi siamo</a></li>
-    <li><a href="#">Eventi</a></li>
-    <li><a href="#">Spettacoli</a></li>
-    <li><a href="#">Contatti</a></li>
+    <li class="text-center"><a href="#">Chi siamo</a></li>
+    <li class="text-center"><a href="#">Eventi</a></li>
+    <li class="text-center"><a href="#">Spettacoli</a></li>
+    <li class="text-center"><a href="#">Contatti</a></li>
   </ul>
 </div>
 
@@ -41,8 +43,8 @@
 <!-- NEWEST -->
 <div class="row large-12 columns">
   <div>&nbsp;</div>
-  <section id="news" data-magellan-target="news">
-    <div class="large-4 medium-4 columns">
+  <section data-magellan-target="news">
+    <div id="news" class="large-4 medium-4 columns">
       <img class="float-center" src="img/mobile/scusi_lei.png">
       <div>&nbsp;</div>
     </div>
