--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
         <!-- top bar -->
         <div data-sticky-container>
           <div class="title-bar hide-for-medium" data-sticky data-sticky-on="small">
-              <div class="title-bar-left">
-                <button class="menu-icon" type="button" data-open="sideBar"></button>
-              </div>
+            <div class="title-bar-left">
+              <button class="menu-icon" type="button" data-open="sideBar"></button>
+            </div>
           </div>
         </div>
 
@@ -46,7 +46,7 @@
         <div class="row column text-center">
           <img class="float-center" src="img/mobile/logo.png">
         </div>
-        <div class="row large-12 columns show-for-large grigio testo-bianco">
+        <div class="row show-for-large grigio testo-bianco">
           <ul id="menu" class="menu expanded">
             <li class="text-center"><a href="#">Chi siamo</a></li>
             <li class="text-center"><a href="#">Eventi</a></li>
@@ -57,10 +57,10 @@
 
 
         <!-- NEWEST -->
-        <div id="newest" class="row large-12 columns">
-            <div id="news" class="large-4 medium-4 columns">
-              <img class="float-center" src="img/mobile/scusi_lei.png">
-            </div>
+        <div id="newest" class="row">
+          <div id="news" class="large-4 medium-4 columns">
+            <img class="float-center" src="img/mobile/scusi_lei.png">
+          </div>
           <div class="large-8 columns">
             <h2 class="testo-rosso">Scusi lei ucciderebbe mio marito?</h2>
             <p>Teatro Comunale<br/>
@@ -74,100 +74,147 @@
 
 
         <!-- CHI SIAMO -->
-          <div id="chi_siamo" class="row large-12 columns">
-            <h1 class="testo-rosso">Chi Siamo</h1>
-            <div class="row">
-              <div class="large-6 large-push-6  columns">
-                <img id="chi_siamo_img" class="float-center" src="img/mobile/chi_siamo.png">
-              </div>
-              <div class="large-6 large-pull-6 columns">
-                <p>Molti di noi si sono conosciuti durante le scuole superiori, attraverso laboratori di teatro. Durante le scuole “fare teatro” sembrava un buon modo per divertirci e stare insieme, ma ben presto ci siamo accorti che questa passione era diventata un vero e proprio interesse che voleva continuare ed essere coltivato.
-                  Terminate le scuole, è bastato l’entusiasmo a riunire il gruppo che già recitava nei laboratori scolastici. Non è passato troppo tempo perché fosse pronto il nostro primo spettacolo “Buona la prima?!?”, che va in scena il 17 Novembre 2007 a Novara.
-                  Tra alti e bassi, nuovi arrivi e nuovi saluti, copioni e spettacoli si sono moltiplicati e, oggi come allora, il teatro ci appassiona e la voglia di divertirsi su un palcoscenico non è mai passata.
-                  La nostra speranza è quella di continuare ancora a lungo con lo stesso entusiasmo, la stessa passione e lo stesso affiatamento che ci hanno sempre contraddistinto e che tanto contribuiscono a divertire il nostro pubblico quando andiamo in scena.</p>
-                </div>
+        <div id="chi_siamo" class="row">
+          <h1 class="testo-rosso">Chi Siamo</h1>
+          <div class="row">
+            <div class="large-6 large-push-6  columns">
+              <img id="chi_siamo_img" class="float-center" src="img/mobile/chi_siamo.png">
+            </div>
+            <div class="large-6 large-pull-6 columns">
+              <p>Molti di noi si sono conosciuti durante le scuole superiori, attraverso laboratori di teatro. Durante le scuole “fare teatro” sembrava un buon modo per divertirci e stare insieme, ma ben presto ci siamo accorti che questa passione era diventata un vero e proprio interesse che voleva continuare ed essere coltivato.
+                Terminate le scuole, è bastato l’entusiasmo a riunire il gruppo che già recitava nei laboratori scolastici. Non è passato troppo tempo perché fosse pronto il nostro primo spettacolo “Buona la prima?!?”, che va in scena il 17 Novembre 2007 a Novara.
+                Tra alti e bassi, nuovi arrivi e nuovi saluti, copioni e spettacoli si sono moltiplicati e, oggi come allora, il teatro ci appassiona e la voglia di divertirsi su un palcoscenico non è mai passata.
+                La nostra speranza è quella di continuare ancora a lungo con lo stesso entusiasmo, la stessa passione e lo stesso affiatamento che ci hanno sempre contraddistinto e che tanto contribuiscono a divertire il nostro pubblico quando andiamo in scena.</p>
               </div>
             </div>
+          </div>
 
           <!-- CAROUSEL -->
-            <div id="carousel" class="row large-12 columns rosso font ">
-              <div class="small-4 columns">
-                <img class="float-center" src="img/mobile/davide.png">
-                <div class="text-center testo-bianco">Davide</div>
+          <div id="carousel" class="row rosso font ">
+            <div class="orbit" role="region" data-orbit>
+              <ul class="orbit-container">
+                <button class="orbit-previous"><span class="show-for-sr">Previous Slide</span>&#9664;&#xFE0E;</button>
+                <button class="orbit-next"><span class="show-for-sr">Next Slide</span>&#9654;&#xFE0E;</button>
+                <li class="is-active orbit-slide">
+                  <div class="row">
+                    <div class="small-4 columns">
+                      <img class="float-center" src="img/mobile/davide.png">
+                      <div class="text-center testo-bianco">Davide</div>
+                    </div>
+                    <div class="small-4 columns">
+                      <img class="float-center" src="img/mobile/stefano.png">
+                      <div class="text-center testo-bianco">Stefano</div>
+                    </div>
+                    <div class="small-4 columns">
+                      <img class="float-center" src="img/mobile/davide.png">
+                      <div class="text-center testo-bianco">Davide</div>
+                    </div>
+                  </div>
+                </li>
+                <li class="orbit-slide">
+                  <div class="row">
+                    <div class="small-4 columns">
+                      <img class="float-center" src="img/mobile/stefano.png">
+                      <div class="text-center testo-bianco">Stefano</div>
+                    </div>
+                    <div class="small-4 columns">
+                      <img class="float-center" src="img/mobile/davide.png">
+                      <div class="text-center testo-bianco">Davide</div>
+                    </div>
+                    <div class="small-4 columns">
+                      <img class="float-center" src="img/mobile/stefano.png">
+                      <div class="text-center testo-bianco">Stefano</div>
+                    </div>
+                  </div>
+                </li>
               </div>
-              <div class="small-4 columns">
-                <img class="float-center" src="img/mobile/stefano.png">
-                <div class="text-center testo-bianco">Stefano</div>
-              </div>
-              <div class="small-4 columns">
-                <div class="text-center testo-bianco"><a href="#" class="large-arrow font testo-bianco">&gt;</a></div>
-              </div>
-            </div>
+            </ul>
+          </div>
 
           <!-- SPETTACOLI -->
-            <div class="row large-12 columns">
-                <h1 id="spettacoli" class="testo-rosso">I Nostri Spettacoli</h1>
-              <div class="row">
-                <div class="large-4 columns text-center">
-                  <img ="spettacolo_past_img" class="float-center" src="img/mobile/salotto.png">
-                  <p><strong class="font-grasso">Salotto per donne usate</strong></p>
-                  <p>Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini. </p>
-                  <p><strong>18 Dicembre 2010</strong></p>
-                  <p>Oratorio Sant'Agabio - Novara</p>
-                  <p><strong>18 Dicembre 2010</strong></p>
-                  <p>Oratorio Sant'Agabio - Novara</p>
-                  <p><strong>18 Dicembre 2010</strong></p>
-                  <p>Oratorio Sant'Agabio - Novara</p>
-                </div>
-                <div class="large-4 show-for-medium columns text-center">
-                  <img ="spettacolo_past_img" class="float-center" src="img/mobile/salotto.png">
-                  <p><strong class="font-grasso">Salotto per donne usate</strong></p>
-                  <p>Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini. </p>
-                  <p><strong>18 Dicembre 2010</strong></p>
-                  <p>Oratorio Sant'Agabio - Novara</p>
-                  <p><strong>18 Dicembre 2010</strong></p>
-                  <p>Oratorio Sant'Agabio - Novara</p>
-                  <p><strong>18 Dicembre 2010</strong></p>
-                  <p>Oratorio Sant'Agabio - Novara</p>
-                </div>
-                <div class="large-4 show-for-medium columns text-center">
-                  <img ="spettacolo_past_img" class="float-center" src="img/mobile/salotto.png">
-                  <p><strong class="font-grasso">Salotto per donne usate</strong></p>
-                  <p>Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini. </p>
-                  <p><strong>18 Dicembre 2010</strong></p>
-                  <p>Oratorio Sant'Agabio - Novara</p>
-                  <p><strong>18 Dicembre 2010</strong></p>
-                  <p>Oratorio Sant'Agabio - Novara</p>
-                  <p><strong>18 Dicembre 2010</strong></p>
-                  <p>Oratorio Sant'Agabio - Novara</p>
-                </div>
+          <div class="row">
+            <h1 id="spettacoli" class="testo-rosso">I Nostri Spettacoli</h1>
+            <div class="row">
+              <div class="large-4 columns text-center">
+                <img ="spettacolo_past_img" class="float-center" src="img/mobile/salotto.png">
+                <p><strong class="font-grasso">Salotto per donne usate</strong></p>
+                <p>Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini. </p>
+                <p><strong>18 Dicembre 2010</strong></p>
+                <p>Oratorio Sant'Agabio - Novara</p>
+                <p><strong>18 Dicembre 2010</strong></p>
+                <p>Oratorio Sant'Agabio - Novara</p>
+                <p><strong>18 Dicembre 2010</strong></p>
+                <p>Oratorio Sant'Agabio - Novara</p>
+              </div>
+              <div class="large-4 show-for-medium columns text-center">
+                <img ="spettacolo_past_img" class="float-center" src="img/mobile/salotto.png">
+                <p><strong class="font-grasso">Salotto per donne usate</strong></p>
+                <p>Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini. </p>
+                <p><strong>18 Dicembre 2010</strong></p>
+                <p>Oratorio Sant'Agabio - Novara</p>
+                <p><strong>18 Dicembre 2010</strong></p>
+                <p>Oratorio Sant'Agabio - Novara</p>
+                <p><strong>18 Dicembre 2010</strong></p>
+                <p>Oratorio Sant'Agabio - Novara</p>
+              </div>
+              <div class="large-4 show-for-medium columns text-center">
+                <img ="spettacolo_past_img" class="float-center" src="img/mobile/salotto.png">
+                <p><strong class="font-grasso">Salotto per donne usate</strong></p>
+                <p>Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini. </p>
+                <p><strong>18 Dicembre 2010</strong></p>
+                <p>Oratorio Sant'Agabio - Novara</p>
+                <p><strong>18 Dicembre 2010</strong></p>
+                <p>Oratorio Sant'Agabio - Novara</p>
+                <p><strong>18 Dicembre 2010</strong></p>
+                <p>Oratorio Sant'Agabio - Novara</p>
               </div>
             </div>
+          </div>
 
 
           <!-- PARLANO DI NOI -->
-            <div id="parlano-di-noi" class="row large-12 columns grigio testo-bianco">
-              <h1>Parlano di noi...</h1>
-              <div class="row">
-                <div class="small-4 columns">
-                  <img class="float-center margine-bianco" src="img/mobile/art1.png">
-                </div>
-                <div class="small-4 columns">
-                  <img class="float-center margine-bianco" src="img/mobile/art2.png">
-                </div>
-                <div class="small-4 columns">
-                  <img class="float-center margine-bianco" src="img/mobile/art2.png">
-                </div>
-              </div>
+          <div id="parlano-di-noi" class="row grigio testo-bianco">
+            <h1 class="text-center">Parlano di noi...</h1>
+            <div class="orbit" role="region" data-orbit>
+              <ul class="orbit-container">
+                <button class="orbit-previous"><span class="show-for-sr">Previous Slide</span>&#9664;&#xFE0E;</button>
+                <button class="orbit-next"><span class="show-for-sr">Next Slide</span>&#9654;&#xFE0E;</button>
+                <li class="is-active orbit-slide">
+                  <div class="row">
+                    <div class="small-4 columns">
+                      <img class="float-center margine-bianco" src="img/mobile/art1.png">
+                    </div>
+                    <div class="small-4 columns">
+                      <img class="float-center margine-bianco" src="img/mobile/art2.png">
+                    </div>
+                    <div class="small-4 columns">
+                      <img class="float-center margine-bianco" src="img/mobile/art2.png">
+                    </div>
+                  </div>
+                </li>
+                <li class="orbit-slide">
+                  <div class="row">
+                    <div class="small-4 columns">
+                      <img class="float-center margine-bianco" src="img/mobile/art2.png">
+                    </div>
+                    <div class="small-4 columns">
+                      <img class="float-center margine-bianco" src="img/mobile/art1.png">
+                    </div>
+                    <div class="small-4 columns">
+                      <img class="float-center margine-bianco" src="img/mobile/art2.png">
+                    </div>
+                  </div>
+                </li>
+              </ul>
             </div>
+
+          </div>
 
           <!-- white separate, keep it -->
           <div>&nbsp;</div>
           <!-- CONTATTACI -->
           <div id="contattaci" class="row rosso">
-            <div class="large-12 columns">
-              <h1 class="text-center testo-bianco">Contattaci</h1>
-            </div>
+            <h1 class="text-center testo-bianco">Contattaci</h1>
             <div class="row">
               <div class="small-4 small-centered columns">
                 <a href="mailto:teatroinstabile.no@gmail.com"><img class="float-left" src="img/mobile/email.png"></a>
