--- a/index.html
+++ b/index.html
@@ -97,33 +97,57 @@
                 <button class="orbit-next"><span class="show-for-sr">Next Slide</span>&#9654;&#xFE0E;</button>
                 <li class="is-active orbit-slide">
                   <div class="row">
-                    <div class="small-4 columns">
+                    <div class="small-4 large-2 columns">
                       <img class="float-center" src="img/mobile/davide.png">
                       <div class="text-center testo-bianco">Davide</div>
                     </div>
-                    <div class="small-4 columns">
+                    <div class="small-4 large-2 columns">
                       <img class="float-center" src="img/mobile/stefano.png">
                       <div class="text-center testo-bianco">Stefano</div>
                     </div>
-                    <div class="small-4 columns">
-                      <img class="float-center" src="img/mobile/davide.png">
+                    <div class="small-4 large-2 columns">
+                      <img class="float-center" src="http://placehold.it/86x86?text=1">
+                      <div class="text-center testo-bianco">Davide</div>
+                    </div>
+                    <div class="show-for-medium small-4 large-2 columns">
+                      <img class="float-center" src="http://placehold.it/86x86?text=2">
+                      <div class="text-center testo-bianco">Davide</div>
+                    </div>
+                    <div class="show-for-mediumsmall-4 large-2 columns">
+                      <img class="float-center" src="http://placehold.it/86x86?text=3">
+                      <div class="text-center testo-bianco">Stefano</div>
+                    </div>
+                    <div class="show-for-mediumsmall-4 large-2 columns">
+                      <img class="float-center" src="http://placehold.it/86x86?text=4">
                       <div class="text-center testo-bianco">Davide</div>
                     </div>
                   </div>
                 </li>
                 <li class="orbit-slide">
                   <div class="row">
-                    <div class="small-4 columns">
-                      <img class="float-center" src="img/mobile/stefano.png">
-                      <div class="text-center testo-bianco">Stefano</div>
-                    </div>
-                    <div class="small-4 columns">
-                      <img class="float-center" src="img/mobile/davide.png">
+                    <div class="small-4 large-2 columns">
+                      <img class="float-center" src="http://placehold.it/86x86?text=5">
                       <div class="text-center testo-bianco">Davide</div>
                     </div>
-                    <div class="small-4 columns">
-                      <img class="float-center" src="img/mobile/stefano.png">
+                    <div class="small-4 large-2 columns">
+                      <img class="float-center" src="http://placehold.it/86x86?text=6">
                       <div class="text-center testo-bianco">Stefano</div>
+                    </div>
+                    <div class="small-4 large-2 columns">
+                      <img class="float-center" src="http://placehold.it/86x86?text=7">
+                      <div class="text-center testo-bianco">Davide</div>
+                    </div>
+                    <div class="show-for-medium small-4 large-2 columns">
+                      <img class="float-center" src="http://placehold.it/86x86?text=8">
+                      <div class="text-center testo-bianco">Davide</div>
+                    </div>
+                    <div class="show-for-mediumsmall-4 large-2 columns">
+                      <img class="float-center" src="http://placehold.it/86x86?text=9">
+                      <div class="text-center testo-bianco">Stefano</div>
+                    </div>
+                    <div class="show-for-mediumsmall-4 large-2 columns">
+                      <img class="float-center" src="http://placehold.it/86x86?text=10">
+                      <div class="text-center testo-bianco">Davide</div>
                     </div>
                   </div>
                 </li>
@@ -132,8 +156,8 @@
           </div>
 
           <!-- SPETTACOLI -->
-          <div class="row">
-            <h1 id="spettacoli" class="testo-rosso">I Nostri Spettacoli</h1>
+          <div id="spettacoli" class="row">
+            <h1 class="testo-rosso">I Nostri Spettacoli</h1>
             <div class="row">
               <div class="large-4 columns text-center">
                 <img ="spettacolo_past_img" class="float-center" src="img/mobile/salotto.png">
@@ -147,8 +171,8 @@
                 <p>Oratorio Sant'Agabio - Novara</p>
               </div>
               <div class="large-4 show-for-medium columns text-center">
-                <img ="spettacolo_past_img" class="float-center" src="img/mobile/salotto.png">
-                <p><strong class="font-grasso">Salotto per donne usate</strong></p>
+                <img ="spettacolo_past_img" class="float-center" src="http://placehold.it/248x247">
+                <p><strong class="font-grasso">Se devi dire una bugia, dilla grossa</strong></p>
                 <p>Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini. </p>
                 <p><strong>18 Dicembre 2010</strong></p>
                 <p>Oratorio Sant'Agabio - Novara</p>
@@ -158,7 +182,7 @@
                 <p>Oratorio Sant'Agabio - Novara</p>
               </div>
               <div class="large-4 show-for-medium columns text-center">
-                <img ="spettacolo_past_img" class="float-center" src="img/mobile/salotto.png">
+                <img ="spettacolo_past_img" class="float-center" src="http://placehold.it/248x247">
                 <p><strong class="font-grasso">Salotto per donne usate</strong></p>
                 <p>Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini. </p>
                 <p><strong>18 Dicembre 2010</strong></p>
@@ -182,13 +206,22 @@
                 <li class="is-active orbit-slide">
                   <div class="row">
                     <div class="small-4 columns">
-                      <img class="float-center margine-bianco" src="img/mobile/art1.png">
+                      <img data-toggle="animatedModal10" class="float-center margine-bianco" src="img/mobile/art1.png">
+                      <div class="reveal" id="animatedModal10" data-reveal data-close-on-click="true"
+                           data-animation-in="fade-in" data-animation-out="fade-out">
+                        <h1>Dettagli articolo.</h1>
+                        <p class='lead'>Bau bau bau</p>
+                        <img data-toggle="animatedModal10" class="float-center margine-bianco" src="img/mobile/art1.png">
+                        <button class="close-button" data-close aria-label="Close reveal" type="button">
+                          <span aria-hidden="true">&times;</span>
+                        </button>
+                      </div>
                     </div>
                     <div class="small-4 columns">
                       <img class="float-center margine-bianco" src="img/mobile/art2.png">
                     </div>
                     <div class="small-4 columns">
-                      <img class="float-center margine-bianco" src="img/mobile/art2.png">
+                      <img class="float-center margine-bianco" src="http://placehold.it/94x93">
                     </div>
                   </div>
                 </li>
@@ -201,7 +234,7 @@
                       <img class="float-center margine-bianco" src="img/mobile/art1.png">
                     </div>
                     <div class="small-4 columns">
-                      <img class="float-center margine-bianco" src="img/mobile/art2.png">
+                      <img class="float-center margine-bianco" src="http://placehold.it/94x93">
                     </div>
                   </div>
                 </li>
@@ -216,7 +249,7 @@
           <div id="contattaci" class="row rosso">
             <h1 class="text-center testo-bianco">Contattaci</h1>
             <div class="row">
-              <div class="small-4 small-centered columns">
+              <div class="small-4 medium-2 small-centered columns">
                 <a href="mailto:teatroinstabile.no@gmail.com"><img class="float-left" src="img/mobile/email.png"></a>
                 <a href="https://www.facebook.com/TeatroInstabileNovara/"><img class="float-right" src="img/mobile/facebook.png"></a>
               </div>
