Added magellan for desktop

--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
           <img class="float-center" src="img/mobile/logo.png">
         </div>
         <div class="row show-for-large grigio testo-bianco">
-          <ul id="menu" class="menu expanded">
-            <li class="text-center"><a href="#">Chi siamo</a></li>
+          <ul id="menu" class="menu expanded" data-magellan data-bar-offset="-25">
+            <li class="text-center"><a href="#chi_siamo">Chi siamo</a></li>
             <li class="text-center"><a href="#">Eventi</a></li>
-            <li class="text-center"><a href="#">Spettacoli</a></li>
-            <li class="text-center"><a href="#">Contatti</a></li>
+            <li class="text-center"><a href="#spettacoli">Spettacoli</a></li>
+            <li class="text-center"><a href="#contattaci">Contatti</a></li>
           </ul>
         </div>
 
@@ -107,19 +107,19 @@
                     </div>
                     <div class="small-4 large-2 columns">
                       <img class="float-center" src="http://placehold.it/86x86?text=1">
-                      <div class="text-center testo-bianco">Davide</div>
+                      <div class="text-center testo-bianco">Giulia</div>
                     </div>
                     <div class="show-for-medium small-4 large-2 columns">
                       <img class="float-center" src="http://placehold.it/86x86?text=2">
-                      <div class="text-center testo-bianco">Davide</div>
+                      <div class="text-center testo-bianco">Rita</div>
                     </div>
                     <div class="show-for-mediumsmall-4 large-2 columns">
                       <img class="float-center" src="http://placehold.it/86x86?text=3">
-                      <div class="text-center testo-bianco">Stefano</div>
+                      <div class="text-center testo-bianco">Manuel</div>
                     </div>
                     <div class="show-for-mediumsmall-4 large-2 columns">
                       <img class="float-center" src="http://placehold.it/86x86?text=4">
-                      <div class="text-center testo-bianco">Davide</div>
+                      <div class="text-center testo-bianco">Alice</div>
                     </div>
                   </div>
                 </li>
@@ -135,19 +135,19 @@
                     </div>
                     <div class="small-4 large-2 columns">
                       <img class="float-center" src="http://placehold.it/86x86?text=7">
-                      <div class="text-center testo-bianco">Davide</div>
+                      <div class="text-center testo-bianco">Giulia</div>
                     </div>
                     <div class="show-for-medium small-4 large-2 columns">
                       <img class="float-center" src="http://placehold.it/86x86?text=8">
-                      <div class="text-center testo-bianco">Davide</div>
+                      <div class="text-center testo-bianco">Rita</div>
                     </div>
                     <div class="show-for-mediumsmall-4 large-2 columns">
                       <img class="float-center" src="http://placehold.it/86x86?text=9">
-                      <div class="text-center testo-bianco">Stefano</div>
+                      <div class="text-center testo-bianco">Manuel</div>
                     </div>
                     <div class="show-for-mediumsmall-4 large-2 columns">
                       <img class="float-center" src="http://placehold.it/86x86?text=10">
-                      <div class="text-center testo-bianco">Davide</div>
+                      <div class="text-center testo-bianco">Alice</div>
                     </div>
                   </div>
                 </li>
