--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
         <!-- LOGO -->
         <div class="row column text-center">
-          <img class="float-center" src="img/mobile/logo.png">
+          <img  class="float-center" data-interchange="[img/mobile/logo.png, small], [img/web/logo.png, medium]">
         </div>
         <div class="row show-for-large grigio testo-bianco">
           <ul id="menu" class="menu expanded" data-magellan data-bar-offset="-25">
@@ -78,7 +78,7 @@
             <img class="float-center" src="img/mobile/scusi_lei.png">
           </div>
           <div class="large-8 columns">
-            <h2 class="testo-rosso">Scusi lei ucciderebbe mio marito?</h2>
+            <h2 class="font testo-rosso">Scusi lei ucciderebbe mio marito?</h2>
             <p>Teatro Comunale<br/>
               Piazza Cavour 21, Trecate
             </p>
@@ -91,7 +91,7 @@
 
         <!-- CHI SIAMO -->
         <div id="chi_siamo" class="row">
-          <h1 class="testo-rosso">Chi Siamo</h1>
+          <h1 class="font testo-rosso">Chi Siamo</h1>
           <div class="row">
             <div class="large-6 large-push-6  columns">
               <img id="chi_siamo_img" class="float-center" src="img/mobile/chi_siamo.png">
@@ -173,7 +173,7 @@
 
           <!-- SPETTACOLI -->
           <div id="spettacoli" class="row">
-            <h1 class="testo-rosso">I Nostri Spettacoli</h1>
+            <h1 class="font testo-rosso">I Nostri Spettacoli</h1>
             <div class="row">
               <div class="large-4 columns text-center">
                 <img ="spettacolo_past_img" class="float-center" src="img/mobile/salotto.png">
@@ -214,7 +214,7 @@
 
           <!-- PARLANO DI NOI -->
           <div id="parlano-di-noi" class="row grigio testo-bianco">
-            <h1 class="text-center">Parlano di noi...</h1>
+            <h1 class="font text-center">Parlano di noi...</h1>
             <div class="orbit" role="region" data-orbit>
               <ul class="orbit-container">
                 <button class="orbit-previous"><span class="show-for-sr">Previous Slide</span>&#9664;&#xFE0E;</button>
@@ -225,7 +225,7 @@
                       <img data-toggle="animatedModal1" class="float-center margine-bianco" src="img/mobile/art1.png">
                       <div id="animatedModal1" class="reveal" data-reveal data-close-on-click="true"
                            data-animation-in="fade-in" data-animation-out="fade-out">
-                        <h1>Dettagli articolo.</h1>
+                        <h1 class="font">Dettagli articolo.</h1>
                         <p class='lead'>Bau bau bau</p>
                         <img class="float-center margine-bianco" src="img/mobile/art1.png">
                         <button class="close-button" data-close aria-label="Close reveal" type="button">
@@ -237,7 +237,7 @@
                       <img data-toggle="animatedModal2" class="float-center margine-bianco" src="img/mobile/art2.png">
                       <div id="animatedModal2" class="reveal" data-reveal data-close-on-click="true"
                            data-animation-in="fade-in" data-animation-out="fade-out">
-                        <h1>Dettagli articolo.</h1>
+                        <h1 class="font">Dettagli articolo.</h1>
                         <p class='lead'>Bau bau bau</p>
                         <img class="float-center margine-bianco" src="img/mobile/art2.png">
                         <button class="close-button" data-close aria-label="Close reveal" type="button">
@@ -249,7 +249,7 @@
                       <img data-toggle="animatedModal3" class="float-center margine-bianco" src="http://placehold.it/94x93">
                       <div id="animatedModal3" class="reveal" data-reveal data-close-on-click="true"
                            data-animation-in="fade-in" data-animation-out="fade-out">
-                        <h1>Dettagli articolo.</h1>
+                        <h1 class="font">Dettagli articolo.</h1>
                         <p class='lead'>Bau bau bau</p>
                         <img class="float-center margine-bianco" src="img/mobile/art2.png">
                         <button class="close-button" data-close aria-label="Close reveal" type="button">
@@ -280,7 +280,7 @@
           <div>&nbsp;</div>
           <!-- CONTATTACI -->
           <div id="contattaci" class="row rosso">
-            <h1 class="text-center testo-bianco">Contattaci</h1>
+            <h1 class="font text-center testo-bianco">Contattaci</h1>
             <div class="row">
               <div class="small-4 medium-2 small-centered columns">
                 <a href="mailto:teatroinstabile.no@gmail.com"><img class="float-left" src="img/mobile/email.png"></a>
@@ -295,29 +295,29 @@
     </div>
 
     <script type="text/javascript">
-    WebFontConfig = {
-      google: { families: [ 'Libre+Baskerville::latin' ] }
-    };
-    (function() {
-      var wf = document.createElement('script');
-      wf.src = 'https://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
-      wf.type = 'text/javascript';
-      wf.async = 'true';
-      var s = document.getElementsByTagName('script')[0];
-      s.parentNode.insertBefore(wf, s);
-    })(); </script>
+      WebFontConfig = {
+        google: { families: [ 'Open+Sans::latin' ] }
+      };
+      (function() {
+        var wf = document.createElement('script');
+        wf.src = 'https://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
+        wf.type = 'text/javascript';
+        wf.async = 'true';
+        var s = document.getElementsByTagName('script')[0];
+        s.parentNode.insertBefore(wf, s);
+      })(); </script>
     <script type="text/javascript">
-    WebFontConfig = {
-      google: { families: [ 'Catamaran:400,900:latin' ] }
-    };
-    (function() {
-      var wf = document.createElement('script');
-      wf.src = 'https://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
-      wf.type = 'text/javascript';
-      wf.async = 'true';
-      var s = document.getElementsByTagName('script')[0];
-      s.parentNode.insertBefore(wf, s);
-    })(); </script>
+      WebFontConfig = {
+        google: { families: [ 'EB+Garamond::latin' ] }
+      };
+      (function() {
+        var wf = document.createElement('script');
+        wf.src = 'https://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
+        wf.type = 'text/javascript';
+        wf.async = 'true';
+        var s = document.getElementsByTagName('script')[0];
+        s.parentNode.insertBefore(wf, s);
+      })(); </script>
 
     <script src="js/vendor/jquery.js"></script>
     <script src="js/vendor/what-input.js"></script>
