--- a/index.html
+++ b/index.html
@@ -197,10 +197,10 @@
                   <div class="date-spettacoli">
                     <p><strong>18 Dicembre 2010</strong></p>
                     <p>Oratorio Sant'Agabio - Novara</p>
+                    <p><strong>5 Marzo 2011</strong></p>
+                    <p>Teatro Comunale - Trecate (NO)</p>
                     <p><strong>18 Dicembre 2010</strong></p>
-                    <p>Oratorio Sant'Agabio - Novara</p>
-                    <p><strong>18 Dicembre 2010</strong></p>
-                    <p>Oratorio Sant'Agabio - Novara</p>
+                    <p>Teatro "Silvio Pellico" - Trecate (NO)</p>
                   </div>
                 </div>
               </div>
@@ -212,10 +212,10 @@
                   <div class="date-spettacoli">
                     <p><strong>18 Dicembre 2010</strong></p>
                     <p>Oratorio Sant'Agabio - Novara</p>
+                    <p><strong>5 Marzo 2011</strong></p>
+                    <p>Teatro Comunale - Trecate (NO)</p>
                     <p><strong>18 Dicembre 2010</strong></p>
-                    <p>Oratorio Sant'Agabio - Novara</p>
-                    <p><strong>18 Dicembre 2010</strong></p>
-                    <p>Oratorio Sant'Agabio - Novara</p>
+                    <p>Teatro "Silvio Pellico" - Trecate (NO)</p>
                   </div>
                 </div>
               </div>
@@ -227,10 +227,10 @@
                   <div class="date-spettacoli">
                     <p><strong>18 Dicembre 2010</strong></p>
                     <p>Oratorio Sant'Agabio - Novara</p>
+                    <p><strong>5 Marzo 2011</strong></p>
+                    <p>Teatro Comunale - Trecate (NO)</p>
                     <p><strong>18 Dicembre 2010</strong></p>
-                    <p>Oratorio Sant'Agabio - Novara</p>
-                    <p><strong>18 Dicembre 2010</strong></p>
-                    <p>Oratorio Sant'Agabio - Novara</p>
+                    <p>Teatro "Silvio Pellico" - Trecate (NO)</p>
                   </div>
                 </div>
               </div>
@@ -248,7 +248,11 @@
                 <li class="is-active orbit-slide">
                   <div class="row">
                     <div class="small-4 columns">
-                      <img data-toggle="animatedModal1" class="float-center margine-bianco" src="img/mobile/art1.png">
+                      <img data-toggle="animatedModal1" class="float-center margine-bianco" data-interchange="[img/mobile/art1.png, small], [img/web/art1.png, medium]">
+                      <div class="date-spettacoli  hide-for-small-only">
+                        <div class="text-center"><strong>18 Dicembre 2015</strong></div>
+                        <div class="text-center">Corriere di Novara</div>
+                      </div>
                       <div id="animatedModal1" class="reveal" data-reveal data-close-on-click="true"
                       data-animation-in="fade-in" data-animation-out="fade-out">
                       <h1 class="font">Dettagli articolo.</h1>
@@ -260,7 +264,11 @@
                     </div>
                   </div>
                   <div class="small-4 columns">
-                    <img data-toggle="animatedModal2" class="float-center margine-bianco" src="img/mobile/art2.png">
+                    <img data-toggle="animatedModal2" class="float-center margine-bianco" data-interchange="[img/mobile/art2.png, small], [img/web/art2.png, medium]">
+                    <div class="date-spettacoli  hide-for-small-only">
+                      <div class="text-center"><strong>18 Dicembre 2015</strong></div>
+                      <div class="text-center">Corriere di Novara</div>
+                    </div>
                     <div id="animatedModal2" class="reveal" data-reveal data-close-on-click="true"
                     data-animation-in="fade-in" data-animation-out="fade-out">
                     <h1 class="font">Dettagli articolo.</h1>
@@ -272,7 +280,11 @@
                   </div>
                 </div>
                 <div class="small-4 columns">
-                  <img data-toggle="animatedModal3" class="float-center margine-bianco" src="http://placehold.it/94x93">
+                  <img data-toggle="animatedModal3" class="float-center margine-bianco" data-interchange="[http://placehold.it/94x93, small], [http://placehold.it/163x161, medium]">
+                  <div class="date-spettacoli  hide-for-small-only">
+                    <div class="text-center"><strong>18 Dicembre 2015</strong></div>
+                    <div class="text-center">Corriere di Novara</div>
+                  </div>
                   <div id="animatedModal3" class="reveal" data-reveal data-close-on-click="true"
                   data-animation-in="fade-in" data-animation-out="fade-out">
                   <h1 class="font">Dettagli articolo.</h1>
@@ -287,37 +299,77 @@
             <li class="orbit-slide">
               <div class="row">
                 <div class="small-4 columns">
-                  <img class="float-center margine-bianco" src="img/mobile/art2.png">
-                </div>
-                <div class="small-4 columns">
+                  <img data-toggle="animatedModal1" class="float-center margine-bianco" data-interchange="[img/mobile/art1.png, small], [img/web/art1.png, medium]">
+                  <div class="date-spettacoli  hide-for-small-only">
+                    <div class="text-center"><strong>18 Dicembre 2015</strong></div>
+                    <div class="text-center">Corriere di Novara</div>
+                  </div>
+                  <div id="animatedModal1" class="reveal" data-reveal data-close-on-click="true"
+                  data-animation-in="fade-in" data-animation-out="fade-out">
+                  <h1 class="font">Dettagli articolo.</h1>
+                  <p class='lead'>Bau bau bau</p>
                   <img class="float-center margine-bianco" src="img/mobile/art1.png">
-                </div>
-                <div class="small-4 columns">
-                  <img class="float-center margine-bianco" src="http://placehold.it/94x93">
+                  <button class="close-button" data-close aria-label="Close reveal" type="button">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
                 </div>
               </div>
-            </li>
-          </ul>
-        </div>
-
-      </div>
-
-      <!-- white separate, keep it -->
-      <div>&nbsp;</div>
-      <!-- CONTATTACI -->
-      <div id="contattaci" class="row rosso">
-        <h1 class="font text-center testo-bianco">Contattaci</h1>
-        <div class="row">
-          <div class="small-4 medium-2 small-centered columns">
-            <a href="mailto:teatroinstabile.no@gmail.com"><img class="float-left" src="img/mobile/email.png"></a>
-            <a href="https://www.facebook.com/TeatroInstabileNovara/"><img class="float-right" src="img/mobile/facebook.png"></a>
+              <div class="small-4 columns">
+                <img data-toggle="animatedModal2" class="float-center margine-bianco" data-interchange="[img/mobile/art2.png, small], [img/web/art2.png, medium]">
+                <div class="date-spettacoli  hide-for-small-only">
+                  <div class="text-center"><strong>18 Dicembre 2015</strong></div>
+                  <div class="text-center">Corriere di Novara</div>
+                </div>
+                <div id="animatedModal2" class="reveal" data-reveal data-close-on-click="true"
+                data-animation-in="fade-in" data-animation-out="fade-out">
+                <h1 class="font">Dettagli articolo.</h1>
+                <p class='lead'>Bau bau bau</p>
+                <img class="float-center margine-bianco" src="img/mobile/art2.png">
+                <button class="close-button" data-close aria-label="Close reveal" type="button">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+            </div>
+            <div class="small-4 columns">
+              <img data-toggle="animatedModal3" class="float-center margine-bianco" data-interchange="[http://placehold.it/94x93, small], [http://placehold.it/163x161, medium]">
+              <div class="date-spettacoli  hide-for-small-only">
+                <div class="text-center"><strong>18 Dicembre 2015</strong></div>
+                <div class="text-center">Corriere di Novara</div>
+              </div>
+              <div id="animatedModal3" class="reveal" data-reveal data-close-on-click="true"
+              data-animation-in="fade-in" data-animation-out="fade-out">
+              <h1 class="font">Dettagli articolo.</h1>
+              <p class='lead'>Bau bau bau</p>
+              <img class="float-center margine-bianco" src="img/mobile/art2.png">
+              <button class="close-button" data-close aria-label="Close reveal" type="button">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
           </div>
-        </div>
-        <div>&nbsp;</div>
-      </div>
+        </li>
+      </ul>
     </div>
 
   </div>
+
+  <!-- white separate, keep it -->
+  <div>&nbsp;</div>
+  <!-- CONTATTACI -->
+  <div id="contattaci" class="row rosso">
+    <h1 class="font text-center testo-bianco">Contattaci</h1>
+    <div class="row">
+      <div class="small-4 medium-2 small-centered columns">
+        <div class="center-social ">
+          <a href="mailto:teatroinstabile.no@gmail.com"><img id="mail" src="img/mobile/email.png"></a>
+          <a href="https://www.facebook.com/TeatroInstabileNovara/"><img id="facebook" src="img/mobile/facebook.png"></a>
+        </div>
+      </div>
+    </div>
+    <div>&nbsp;</div>
+  </div>
+</div>
+
+</div>
 </div>
 
 <script type="text/javascript">
