corrected twitter card

--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
 
   <!-- facebook -->
   <meta property="og:description" content="Teatro Instabile - Novara"/>
-  <meta property="og:url" content="http://chiaracielo-paolo.rhcloud.com/"/>
-  <meta property="og:image" content="http://chiaracielo-paolo.rhcloud.com/img/foto.png"/>
+  <meta property="og:url" content="http://ti.netlify.com/"/>
+  <meta property="og:image" content="http://ti.netlify.com/img/web/logo.png"/>
   <meta property="og:type" content="website"/>
-  <meta property="og:site_name" content="Matrimonio di ChiaraCielo e Paolo"/>
-  <meta property="og:title" content="Matrimonio di ChiaraCielo e Paolo"/>
+  <meta property="og:site_name" content="Teatro Instabile - Novara"/>
+  <meta property="og:title" content="Teatro Instabile - Novara"/>
 
   <!-- twitter -->
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@paolo_antinori_" />
   <meta name="twitter:title" content="Teatro Instabile - Novara" />
   <meta name="twitter:description" content="Teatro Instabile - Novara" />
-  <meta name="twitter:image" content="http://chiaracielo-paolo.rhcloud.com/img/foto.png" />
-  <meta name="twitter:url" content="http://chiaracielo-paolo.rhcloud.com" />
+  <meta name="twitter:image" content="http://ti.netlify.com/img/web/logo.png" />
+  <meta name="twitter:url" content="http://ti.netlify.com/" />
 </head>
 
 <body>
